Upgraded library to use java module system with Java 11 as target.