@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2003-2010, Live Media Pty. Ltd.
+ * Copyright (c) 2003-2019, Live Media Pty. Ltd.
  * All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without modification, are permitted
@@ -34,33 +34,32 @@ import com.argot.TypeReader;
 import com.argot.TypeWriter;
 
 /**
- * This is a byte array. Basically for any binary data or storing other types of data as part of another mapped set. It uses a single unsigned 32bit integer to specificy the size of the array. It returns and writes byte[].
+ * This is a byte array. Basically for any binary data or storing other types of data as part of another mapped set. It
+ * uses a single unsigned 32bit integer to specificy the size of the array. It returns and writes byte[].
  */
-public class U16ArrayByte implements TypeReader, TypeWriter
-{
-	public static final String TYPENAME = "u16binary";
-	public static final String VERSION = "1.3";
+public class U16ArrayByte implements TypeReader, TypeWriter {
+    public static final String TYPENAME = "u16binary";
+    public static final String VERSION = "1.3";
 
-	public Object read(final TypeInputStream in) throws TypeException, IOException
-	{
-		final Integer id = (Integer) in.readObject(UInt16.TYPENAME);
+    @Override
+    public Object read(final TypeInputStream in) throws TypeException, IOException {
+        final Integer id = (Integer) in.readObject(UInt16.TYPENAME);
 
-		final byte[] bytes = new byte[id.intValue()];
-		in.read(bytes, 0, bytes.length);
+        final byte[] bytes = new byte[id.intValue()];
+        in.read(bytes, 0, bytes.length);
 
-		return bytes;
-	}
+        return bytes;
+    }
 
-	public void write(final TypeOutputStream out, final Object o) throws TypeException, IOException
-	{
-		if (!(o instanceof byte[]))
-		{
-			throw new TypeException("u16binary: can only write objects of type byte[]");
-		}
+    @Override
+    public void write(final TypeOutputStream out, final Object o) throws TypeException, IOException {
+        if (!(o instanceof byte[])) {
+            throw new TypeException("u16binary: can only write objects of type byte[]");
+        }
 
-		final byte[] bytes = (byte[]) o;
+        final byte[] bytes = (byte[]) o;
 
-		out.writeObject("uint16", new Integer(bytes.length));
-		out.getStream().write(bytes);
-	}
+        out.writeObject("uint16", Integer.valueOf(bytes.length));
+        out.getStream().write(bytes);
+    }
 }
