@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2003-2010, Live Media Pty. Ltd.
+ * Copyright (c) 2003-2019, Live Media Pty. Ltd.
  * All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without modification, are permitted
@@ -34,49 +34,41 @@ import com.argot.TypeReader;
 import com.argot.TypeWriter;
 
 /**
- * This is a short string encoded in UTF8 format. It uses a single unsigned
- * byte to specify the length.  So the data length can be between 0-254 
- * characters. 0 is an empty string.  255 is a null string.
+ * This is a short string encoded in UTF8 format. It uses a single unsigned byte to specify the length. So the data
+ * length can be between 0-254 characters. 0 is an empty string. 255 is a null string.
  */
-public class U32UTF8
-implements TypeReader, TypeWriter
-{
-	public static final String TYPENAME = "u32utf8";
-	public static final String VERSION = "1.3";
+public class U32UTF8 implements TypeReader, TypeWriter {
+    public static final String TYPENAME = "u32utf8";
+    public static final String VERSION = "1.3";
 
-	public Object read(TypeInputStream in)
-	throws TypeException, IOException
-	{
-		Long id = (Long) in.readObject( UInt32.TYPENAME );
-		
-		if ( id.intValue() > 0 )
-		{
-			byte[] bytes = new byte[ id.intValue() ];	
-			int read = in.read(bytes,0,bytes.length);
-			return new String( bytes, 0, read, "UTF-8");
-		}
-		
-		return new String("");
-	}
+    @Override
+    public Object read(TypeInputStream in) throws TypeException, IOException {
+        Long id = (Long) in.readObject(UInt32.TYPENAME);
 
-	public void write(TypeOutputStream out, Object o )
-	throws TypeException, IOException
-	{
-		if ( !(o instanceof String) )
-		{
-			if ( o == null )
-			{
-				out.writeObject( UInt32.TYPENAME, new Long( 0 ) );
-				return;
-			}
-			throw new TypeException( "StringType: can only write objects of type String");
-		}
-		
-		String s = (String) o;
-		byte[] bytes = s.getBytes();
-		int len = bytes.length;
+        if (id.intValue() > 0) {
+            byte[] bytes = new byte[id.intValue()];
+            int read = in.read(bytes, 0, bytes.length);
+            return new String(bytes, 0, read, "UTF-8");
+        }
 
-		out.writeObject( UInt32.TYPENAME, new Long( len  ) );
-		out.getStream().write( bytes, 0,  len );
-	}
+        return new String("");
+    }
+
+    @Override
+    public void write(TypeOutputStream out, Object o) throws TypeException, IOException {
+        if (!(o instanceof String)) {
+            if (o == null) {
+                out.writeObject(UInt32.TYPENAME, Long.valueOf(0));
+                return;
+            }
+            throw new TypeException("StringType: can only write objects of type String");
+        }
+
+        String s = (String) o;
+        byte[] bytes = s.getBytes();
+        int len = bytes.length;
+
+        out.writeObject(UInt32.TYPENAME, Long.valueOf(len));
+        out.getStream().write(bytes, 0, len);
+    }
 }
