@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2003-2010, Live Media Pty. Ltd.
+ * Copyright (c) 2003-2019, Live Media Pty. Ltd.
  * All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without modification, are permitted
@@ -34,50 +34,45 @@ import com.argot.TypeReader;
 import com.argot.TypeWriter;
 
 /**
- * This is a short string encoded in UTF8 format. It uses a single unsigned byte to specify the length. So the data length can be between 0-254 characters. 0 is an empty string. 255 is a null string.
+ * This is a short string encoded in UTF8 format. It uses a single unsigned byte to specify the length. So the data
+ * length can be between 0-254 characters. 0 is an empty string. 255 is a null string.
  */
-public class UVInt28UTF8 implements TypeReader, TypeWriter
-{
-	public static final String TYPENAME = "u32utf8";
-	public static final String VERSION = "1.3";
+public class UVInt28UTF8 implements TypeReader, TypeWriter {
+    public static final String TYPENAME = "u32utf8";
+    public static final String VERSION = "1.3";
 
-	public Object read(final TypeInputStream in) throws TypeException, IOException
-	{
-		final Integer id = (Integer) in.readObject(UVInt28.TYPENAME);
+    @Override
+    public Object read(final TypeInputStream in) throws TypeException, IOException {
+        final Integer id = (Integer) in.readObject(UVInt28.TYPENAME);
 
-		String v = null;
+        String v = null;
 
-		if (id.intValue() > 0)
-		{
-			final byte[] bytes = new byte[id.intValue()];
-			final int read = in.read(bytes, 0, bytes.length);
-			v = new String(bytes, 0, read, "UTF-8");
-		}
-		else
-		{
-			v = new String("");
-		}
+        if (id.intValue() > 0) {
+            final byte[] bytes = new byte[id.intValue()];
+            final int read = in.read(bytes, 0, bytes.length);
+            v = new String(bytes, 0, read, "UTF-8");
+        } else {
+            v = new String("");
+        }
 
-		return v;
-	}
+        return v;
+    }
 
-	public void write(final TypeOutputStream out, final Object o) throws TypeException, IOException
-	{
-		if (!(o instanceof String))
-		{
-			if (o == null)
-			{
-				out.writeObject(UVInt28.TYPENAME, new Integer(0));
-				return;
-			}
-			throw new TypeException("StringType: can only write objects of type String");
-		}
+    @Override
+    public void write(final TypeOutputStream out, final Object o) throws TypeException, IOException {
+        if (!(o instanceof String)) {
+            if (o == null) {
+                out.writeObject(UVInt28.TYPENAME, Integer.valueOf(0));
+                return;
+            }
+            throw new TypeException("StringType: can only write objects of type String");
+        }
 
-		final String s = (String) o;
-		final byte[] bytes = s.getBytes();
-		final int len = bytes.length;
+        final String s = (String) o;
+        final byte[] bytes = s.getBytes();
+        final int len = bytes.length;
 
-		out.writeObject(UVInt28.TYPENAME, new Integer(len));
-		out.getStream().write(bytes, 0, len);
-	}
+        out.writeObject(UVInt28.TYPENAME, Integer.valueOf(len));
+        out.getStream().write(bytes, 0, len);
+    }
 }
