@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2003-2010, Live Media Pty. Ltd.
+ * Copyright (c) 2003-2019, Live Media Pty. Ltd.
  * All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without modification, are permitted
@@ -51,400 +51,329 @@ import com.argot.TypeWriter;
 import com.argot.common.UInt8;
 import com.argot.common.UVInt28;
 
-public class MetaAbstract
-extends MetaExpression
-implements MetaDefinition, TypeRelation
-{
+public class MetaAbstract extends MetaExpression implements MetaDefinition, TypeRelation {
     public static final String TYPENAME = "meta.abstract";
-	public static final String VERSION = "1.3";
+    public static final String VERSION = "1.3";
 
-	protected Map<Integer,MetaMap> _concreteToMap;
+    protected Map<Integer, MetaMap> _concreteToMap;
 
-	private final Map<String,Integer> _relationMap;
+    private final Map<String, Integer> _relationMap;
 
-	private MetaAbstractMap _defaultMappings[];
+    private MetaAbstractMap _defaultMappings[];
 
-	// This keeps a list of any abstract types we've mapped.
-	private final List<MetaAbstract> _abstractParentMap;
+    // This keeps a list of any abstract types we've mapped.
+    private final List<MetaAbstract> _abstractParentMap;
 
-	protected class MetaMap
-	{
-		public boolean isHidden;
-		public int mapTypeId;
-	}
+    protected class MetaMap {
+        public boolean isHidden;
+        public int mapTypeId;
+    }
 
-	public MetaAbstract()
-	{
-		_concreteToMap = new HashMap<Integer,MetaMap>();
-		//_mapToConcrete = new HashMap();
-		_relationMap = new HashMap<String,Integer>();
-		_abstractParentMap = new ArrayList<MetaAbstract>();
-		_defaultMappings = null;
-	}
+    public MetaAbstract() {
+        _concreteToMap = new HashMap<Integer, MetaMap>();
+        //_mapToConcrete = new HashMap();
+        _relationMap = new HashMap<String, Integer>();
+        _abstractParentMap = new ArrayList<MetaAbstract>();
+        _defaultMappings = null;
+    }
 
-	public MetaAbstract( final Object mappings[] )
-	{
-		this();
-		_defaultMappings = new MetaAbstractMap[mappings.length];
+    public MetaAbstract(final Object mappings[]) {
+        this();
+        _defaultMappings = new MetaAbstractMap[mappings.length];
 
-		for (int x=0; x<mappings.length;x++)
-		{
-			_defaultMappings[x] = (MetaAbstractMap) mappings[x];
-		}
-	}
+        for (int x = 0; x < mappings.length; x++) {
+            _defaultMappings[x] = (MetaAbstractMap) mappings[x];
+        }
+    }
 
-	public MetaAbstract( final MetaAbstractMap defaultMappings[] )
-	{
-		this();
-		_defaultMappings = defaultMappings;
-	}
+    public MetaAbstract(final MetaAbstractMap defaultMappings[]) {
+        this();
+        _defaultMappings = defaultMappings;
+    }
 
     @Override
-    public void bind(final TypeLibrary library, final int memberTypeId,	final TypeLocation location, final TypeElement definition)
-    throws TypeException
-    {
-		super.bind(library, memberTypeId, location, definition);
-		if (_defaultMappings != null)
-		{
-			for (int x=0; x<_defaultMappings.length;x++)
-			{
-				final MetaAbstractMap mapping = _defaultMappings[x];
-				if (mapping == null)
-				{
-					throw new TypeException("MetaAbstract: Default mapping " + x + " invalid");
-				}
+    public void bind(final TypeLibrary library, final int memberTypeId, final TypeLocation location, final TypeElement definition) throws TypeException {
+        super.bind(library, memberTypeId, location, definition);
+        if (_defaultMappings != null) {
+            for (int x = 0; x < _defaultMappings.length; x++) {
+                final MetaAbstractMap mapping = _defaultMappings[x];
+                if (mapping == null) {
+                    throw new TypeException("MetaAbstract: Default mapping " + x + " invalid");
+                }
 
-		        final TypeElement concreteElement = library.getStructure( mapping.getConcreteType() );
-		        if (concreteElement instanceof MetaAbstract)
-		        {
-		        	((MetaAbstract)concreteElement).addAbstractMap(this);
-		        }
-		        else if (!(concreteElement instanceof MetaIdentity))
-		        {
-		        	throw new TypeException("Can only map abstract types to identity or abstract definitions");
-		        }
-		        addMap( mapping.getConcreteType(), TypeLibrary.NOTYPE, true );
-			}
-		}
-	}
+                final TypeElement concreteElement = library.getStructure(mapping.getConcreteType());
+                if (concreteElement instanceof MetaAbstract) {
+                    ((MetaAbstract) concreteElement).addAbstractMap(this);
+                } else if (!(concreteElement instanceof MetaIdentity)) {
+                    throw new TypeException("Can only map abstract types to identity or abstract definitions");
+                }
+                addMap(mapping.getConcreteType(), TypeLibrary.NOTYPE, true);
+            }
+        }
+    }
 
-	@Override
-    public String getTypeName()
-    {
+    @Override
+    public String getTypeName() {
         return TYPENAME;
     }
 
-
-	public int getConcreteId(final int id)
-	{
-		final MetaMap m = _concreteToMap.get(id);
-		if (m == null ) {
+    public int getConcreteId(final int id) {
+        final MetaMap m = _concreteToMap.get(id);
+        if (m == null) {
             return -1;
         }
-		return m.mapTypeId;
-	}
+        return m.mapTypeId;
+    }
 
-	public Integer[] getConcreteIds()
-	{
-		return _concreteToMap.keySet().toArray(new Integer[_concreteToMap.keySet().size()]);
-	}
+    public Integer[] getConcreteIds() {
+        return _concreteToMap.keySet().toArray(new Integer[_concreteToMap.keySet().size()]);
+    }
 
-    public void addAbstractMap( final MetaAbstract parent )
-    {
-    	_abstractParentMap.add( parent );
+    public void addAbstractMap(final MetaAbstract parent) {
+        _abstractParentMap.add(parent);
 
-    	final Iterator<Integer> i = _concreteToMap.keySet().iterator();
-    	while( i.hasNext())
-    	{
-    		final Integer c = i.next();
-    		final MetaMap m = _concreteToMap.get(c);
+        final Iterator<Integer> i = _concreteToMap.keySet().iterator();
+        while (i.hasNext()) {
+            final Integer c = i.next();
+            final MetaMap m = _concreteToMap.get(c);
 
-    		parent.addMap( c.intValue(), m.mapTypeId, m.isHidden);
-    	}
+            parent.addMap(c.intValue(), m.mapTypeId, m.isHidden);
+        }
 
     }
 
-	public void addMap( final int concreteType, final int mapType, final boolean isHidden )
-	{
-		final MetaMap metaMap = new MetaMap();
-		metaMap.isHidden = isHidden;
-		metaMap.mapTypeId = mapType;
+    public void addMap(final int concreteType, final int mapType, final boolean isHidden) {
+        final MetaMap metaMap = new MetaMap();
+        metaMap.isHidden = isHidden;
+        metaMap.mapTypeId = mapType;
 
-		_concreteToMap.put( new Integer( concreteType ), metaMap);
+        _concreteToMap.put(Integer.valueOf(concreteType), metaMap);
 
-    	final Iterator<MetaAbstract> i = _abstractParentMap.iterator();
-    	while( i.hasNext())
-    	{
-    		final MetaAbstract p = i.next();
+        final Iterator<MetaAbstract> i = _abstractParentMap.iterator();
+        while (i.hasNext()) {
+            final MetaAbstract p = i.next();
 
-    		p.addMap( concreteType, mapType, isHidden);
-    	}
-	}
+            p.addMap(concreteType, mapType, isHidden);
+        }
+    }
 
-    public int getRelation(final String tag)
-	{
-		final Integer i = _relationMap.get(tag);
-		if (i == null)
-		{
-			return TypeLibrary.NOTYPE;
-		}
-		return i.intValue();
-	}
+    @Override
+    public int getRelation(final String tag) {
+        final Integer i = _relationMap.get(tag);
+        if (i == null) {
+            return TypeLibrary.NOTYPE;
+        }
+        return i.intValue();
+    }
 
-    public void setRelation(final String tag, final int id)
-	{
-		_relationMap.put(tag, new Integer(id));
-	}
+    @Override
+    public void setRelation(final String tag, final int id) {
+        _relationMap.put(tag, Integer.valueOf(id));
+    }
 
+    public static class MetaAbstractTypeReader implements TypeReader, TypeBound, TypeLibraryReader, MetaExpressionReader {
+        private final MetaMarshaller _reader;
 
-	public static class MetaAbstractTypeReader
-	implements TypeReader, TypeBound, TypeLibraryReader, MetaExpressionReader
-	{
-		private final MetaMarshaller _reader;
+        public MetaAbstractTypeReader() {
+            _reader = new MetaMarshaller();
+        }
 
-		public MetaAbstractTypeReader()
-		{
-			_reader = new MetaMarshaller();
-		}
+        @Override
+        public void bind(final TypeLibrary library, final int definitionId, final TypeElement definition) throws TypeException {
+            _reader.bind(library, definitionId, definition);
+        }
 
-        public void bind(final TypeLibrary library, final int definitionId, final TypeElement definition)
-		throws TypeException
-		{
-			_reader.bind(library, definitionId, definition);
-		}
-
-        public Object read(final TypeInputStream in)
-	    throws TypeException, IOException
-	    {
-			final Object[] object = (Object[]) _reader.getReader(in.getTypeMap()).read(in);
-			if (object.length != 1 && !(object[0] instanceof Object[])) {
+        @Override
+        public Object read(final TypeInputStream in) throws TypeException, IOException {
+            final Object[] object = (Object[]) _reader.getReader(in.getTypeMap()).read(in);
+            if (object.length != 1 && !(object[0] instanceof Object[])) {
                 throw new TypeException("Unexpected data");
             }
-			final Object[] mapArray = (Object[]) object[0];
-			final MetaAbstractMap[] defaultMaps = new MetaAbstractMap[mapArray.length];
-			for (int x=0;x<mapArray.length;x++)
-			{
-				defaultMaps[x] = (MetaAbstractMap) mapArray[x];
-				//defaultMaps[x].setConcreteType(in.getTypeMap().getNameId(defaultMaps[x].getConcreteType()));
-			}
+            final Object[] mapArray = (Object[]) object[0];
+            final MetaAbstractMap[] defaultMaps = new MetaAbstractMap[mapArray.length];
+            for (int x = 0; x < mapArray.length; x++) {
+                defaultMaps[x] = (MetaAbstractMap) mapArray[x];
+                //defaultMaps[x].setConcreteType(in.getTypeMap().getNameId(defaultMaps[x].getConcreteType()));
+            }
 
-			return new MetaAbstract(defaultMaps);
-	    }
+            return new MetaAbstract(defaultMaps);
+        }
 
-        public TypeReader getReader(final TypeMap map)
-		throws TypeException
-		{
-			return this;
-		}
+        @Override
+        public TypeReader getReader(final TypeMap map) throws TypeException {
+            return this;
+        }
 
-        public TypeReader getExpressionReader(final TypeMap map, final MetaExpressionResolver resolver, final TypeElement element)
-		throws TypeException
-		{
-			final MetaAbstract metaAbstract = (MetaAbstract) element;
-			return new MetaAbstractReader(metaAbstract,map.getReader(map.getStreamId(UVInt28.TYPENAME)));
-		}
-	}
+        @Override
+        public TypeReader getExpressionReader(final TypeMap map, final MetaExpressionResolver resolver, final TypeElement element) throws TypeException {
+            final MetaAbstract metaAbstract = (MetaAbstract) element;
+            return new MetaAbstractReader(metaAbstract, map.getReader(map.getStreamId(UVInt28.TYPENAME)));
+        }
+    }
 
-	public static class MetaAbstractTypeWriter
-	implements TypeWriter, TypeLibraryWriter, MetaExpressionWriter
-	{
+    public static class MetaAbstractTypeWriter implements TypeWriter, TypeLibraryWriter, MetaExpressionWriter {
 
-        public void write(final TypeOutputStream out, final Object o)
-	    throws TypeException, IOException
-	    {
-	    	final MetaAbstract ma = (MetaAbstract) o;
+        @Override
+        public void write(final TypeOutputStream out, final Object o) throws TypeException, IOException {
+            final MetaAbstract ma = (MetaAbstract) o;
 
-	    	// MetaAbstract uses UVInt28 as part of reading a data type.  This will ensure the type is mapped.
-	    	final TypeMap refMap = (TypeMap) out.getTypeMap().getReference(TypeMap.REFERENCE_MAP);
-	    	refMap.getStreamId(UVInt28.TYPENAME);
+            // MetaAbstract uses UVInt28 as part of reading a data type.  This will ensure the type is mapped.
+            final TypeMap refMap = (TypeMap) out.getTypeMap().getReference(TypeMap.REFERENCE_MAP);
+            refMap.getStreamId(UVInt28.TYPENAME);
 
-	    	out.writeObject(UInt8.TYPENAME, new Integer(ma._defaultMappings.length));
+            out.writeObject(UInt8.TYPENAME, Integer.valueOf(ma._defaultMappings.length));
 
-	    	final MetaAbstractMap[] defaultMappings = ma._defaultMappings;
-	    	for (int x=0; x<defaultMappings.length;x++)
-	    	{
-	    		out.writeObject(MetaAbstractMap.TYPENAME, defaultMappings[x]);
-	    	}
-	    }
+            final MetaAbstractMap[] defaultMappings = ma._defaultMappings;
+            for (int x = 0; x < defaultMappings.length; x++) {
+                out.writeObject(MetaAbstractMap.TYPENAME, defaultMappings[x]);
+            }
+        }
 
-        public TypeWriter getWriter(final TypeMap map)
-		throws TypeException
-		{
-			return this;
-		}
+        @Override
+        public TypeWriter getWriter(final TypeMap map) throws TypeException {
+            return this;
+        }
 
-        public TypeWriter getExpressionWriter(final TypeMap map, final MetaExpressionResolver resolver, final TypeElement element)
-		throws TypeException
-		{
-			final MetaAbstract metaAbstract = (MetaAbstract) element;
-			return new MetaAbstractWriter(metaAbstract,map.getWriter(map.getStreamId(UVInt28.TYPENAME)));
-		}
-	}
+        @Override
+        public TypeWriter getExpressionWriter(final TypeMap map, final MetaExpressionResolver resolver, final TypeElement element) throws TypeException {
+            final MetaAbstract metaAbstract = (MetaAbstract) element;
+            return new MetaAbstractWriter(metaAbstract, map.getWriter(map.getStreamId(UVInt28.TYPENAME)));
+        }
+    }
 
-	public static class MetaAbstractReader
-	implements TypeReader
-	{
-		private final MetaAbstract _metaAbstract;
-		private final TypeReader _uvint28;
-		private final Map<Integer,TypeReader> _mapCache;
+    public static class MetaAbstractReader implements TypeReader {
+        private final MetaAbstract _metaAbstract;
+        private final TypeReader _uvint28;
+        private final Map<Integer, TypeReader> _mapCache;
 
-		public MetaAbstractReader(final MetaAbstract metaAbstract, final TypeReader uvint28)
-		{
-			_metaAbstract = metaAbstract;
-			_uvint28 = uvint28;
-			_mapCache = new HashMap<Integer,TypeReader>();
-		}
+        public MetaAbstractReader(final MetaAbstract metaAbstract, final TypeReader uvint28) {
+            _metaAbstract = metaAbstract;
+            _uvint28 = uvint28;
+            _mapCache = new HashMap<Integer, TypeReader>();
+        }
 
-        public Object read(final TypeInputStream in)
-		throws TypeException, IOException
-		{
-	        final Integer type = (Integer) _uvint28.read(in);
-	        TypeReader mappedReader = _mapCache.get(type);
-	        if ( mappedReader == null )
-	        {
-	        	final int id = mapType( in.getTypeMap(), type );
-	        	mappedReader = in.getTypeMap().getReader(id);
-	        	_mapCache.put(type, mappedReader);
-	        }
-			return mappedReader.read( in );
-		}
+        @Override
+        public Object read(final TypeInputStream in) throws TypeException, IOException {
+            final Integer type = (Integer) _uvint28.read(in);
+            TypeReader mappedReader = _mapCache.get(type);
+            if (mappedReader == null) {
+                final int id = mapType(in.getTypeMap(), type);
+                mappedReader = in.getTypeMap().getReader(id);
+                _mapCache.put(type, mappedReader);
+            }
+            return mappedReader.read(in);
+        }
 
-		private int mapType(final TypeMap map, final Integer type)
-		throws TypeException
-		{
-	        final int definitionId = map.getDefinitionId( type.intValue() );
-	        final TypeLocation location = map.getLibrary().getLocation(definitionId);
-	        int identityId = -1;
-	        if (location instanceof TypeLocationDefinition)
-	        {
-	        	final TypeLocationDefinition definition = (TypeLocationDefinition) location;
-	        	identityId = definition.getId();
-	        }
-	        else if (location instanceof TypeLocationName)
-	        {
-	        	identityId = definitionId;
-	        }
-	        else if (location instanceof TypeLocationBase)
-	        {
-	        	identityId = definitionId;
-	        }
-	        else
-	        {
-	        	throw new TypeException("Unknown location type");
-	        }
+        private int mapType(final TypeMap map, final Integer type) throws TypeException {
+            final int definitionId = map.getDefinitionId(type.intValue());
+            final TypeLocation location = map.getLibrary().getLocation(definitionId);
+            int identityId = -1;
+            if (location instanceof TypeLocationDefinition) {
+                final TypeLocationDefinition definition = (TypeLocationDefinition) location;
+                identityId = definition.getId();
+            } else if (location instanceof TypeLocationName) {
+                identityId = definitionId;
+            } else if (location instanceof TypeLocationBase) {
+                identityId = definitionId;
+            } else {
+                throw new TypeException("Unknown location type");
+            }
 
-			final MetaMap concrete = _metaAbstract._concreteToMap.get( new Integer( identityId ));
-	        if ( concrete == null )
-	        {
-	        	throw new TypeException("type not mapped:" + type.intValue() + " " + map.getName( type.intValue() ).getFullName() );
-	        }
-			return type.intValue();
-		}
-
-	}
-
-	private static class CacheEntry
-	{
-		Integer mapId;
-		TypeWriter idWriter;
-	}
-
-    public static class MetaAbstractWriter
-    implements TypeWriter
-    {
-    	private final MetaAbstract _metaAbstract;
-    	private final TypeWriter _uvint28;
-		private final Map<Class<?>,CacheEntry> _mapCache;
-
-    	public MetaAbstractWriter(final MetaAbstract metaAbstract, final TypeWriter uvint28)
-    	{
-    		_metaAbstract = metaAbstract;
-    		_uvint28 = uvint28;
-    		_mapCache = new HashMap<Class<?>,CacheEntry>();
-    	}
-
-        public void write(final TypeOutputStream out, final Object o)
-		throws TypeException, IOException
-		{
-			final Class<?> clss = o.getClass();
-			CacheEntry entry = _mapCache.get(clss);
-			if (entry == null )
-			{
-				entry = mapType(out.getTypeMap(), clss);
-				_mapCache.put(clss, entry);
-			}
-			_uvint28.write(out, entry.mapId);
-			entry.idWriter.write(out, o);
-		}
-
-		private CacheEntry mapType(final TypeMap map, final Class<?> clss)
-		throws TypeException
-		{
-			// assumes class is bound to definition, not identity.
-			final int[] ids = map.getLibrary().getId(clss);
-			if (ids.length != 1)
-			{
-				if (ids.length>1) {
-                    throw new TypeException("Class bound to multiple system types:" +clss.getName());
-                }
-				if (ids.length==0) {
-                    throw new TypeException("Class not bound to any mapped type:"+clss.getName());
-                }
-			}
-			final int defId = ids[0];
-
-			final MetaName name = map.getLibrary().getName(defId);
-
-			// get the identity id.
-			final int id = map.getLibrary().getTypeId(name);
-
-			// Find the identifier for the abstract map definition using identity internal id.
-			final MetaMap metaMap = _metaAbstract._concreteToMap.get( new Integer( id ));
-	        if ( metaMap == null )
-	        {
-				throw new TypeException( "MetaAbstract - Definition '" + name.getFullName() + "' not mapped to abstract type '"  + map.getLibrary().getName(_metaAbstract.getMemberTypeId()).getFullName() + "'" );
-			}
-
-	        final CacheEntry entry = new CacheEntry();
-
-	        if (!metaMap.isHidden)
-	        {
-		        // This is very important.  When working as a remote client we must ensure
-		        // that the server also has the mapping from concrete to map value.  By
-		        // getting the System Id of the MapId it will automatically resolve if the
-		        // server has the correct value.
-	        	try
-	        	{
-	        		map.getStreamId(metaMap.mapTypeId);
-	        		map.getStreamId(id);
-	        	}
-	        	catch (final TypeException ex)
-	        	{
-	        		throw new TypeException( "MetaAbstract - Definition '" + name.getFullName() + "' not mapped to abstract type '"  + map.getLibrary().getName(_metaAbstract.getMemberTypeId()).getFullName() + "'" );
-	        	}
-	        }
-
-	        // The Id written to file is the mapped concrete id.
-	        try
-	        {
-	        	entry.mapId = new Integer(map.getStreamId(defId));
-	        }
-	        catch( final TypeException ex)
-	        {
-	        	final MetaVersion version = map.getLibrary().getVersion(defId);
-        		throw new TypeException( "MetaAbstract - Definition '" + name.getFullName() + "/"+ version.toString() + "' not mapped to abstract type '"  + map.getLibrary().getName(_metaAbstract.getMemberTypeId()).getFullName() + "'" );
-	        }
-	        // Cache the writer function.
-	        entry.idWriter = map.getWriter(map.getStreamId( defId ));
-			return entry;
-		}
+            final MetaMap concrete = _metaAbstract._concreteToMap.get(Integer.valueOf(identityId));
+            if (concrete == null) {
+                throw new TypeException("type not mapped:" + type.intValue() + " " + map.getName(type.intValue()).getFullName());
+            }
+            return type.intValue();
+        }
 
     }
 
-	public boolean isMapped( final int id )
-	{
-		return _concreteToMap.get( new Integer(id))==null?false:true;
-	}
+    private static class CacheEntry {
+        Integer mapId;
+        TypeWriter idWriter;
+    }
 
+    public static class MetaAbstractWriter implements TypeWriter {
+        private final MetaAbstract _metaAbstract;
+        private final TypeWriter _uvint28;
+        private final Map<Class<?>, CacheEntry> _mapCache;
+
+        public MetaAbstractWriter(final MetaAbstract metaAbstract, final TypeWriter uvint28) {
+            _metaAbstract = metaAbstract;
+            _uvint28 = uvint28;
+            _mapCache = new HashMap<Class<?>, CacheEntry>();
+        }
+
+        @Override
+        public void write(final TypeOutputStream out, final Object o) throws TypeException, IOException {
+            final Class<?> clss = o.getClass();
+            CacheEntry entry = _mapCache.get(clss);
+            if (entry == null) {
+                entry = mapType(out.getTypeMap(), clss);
+                _mapCache.put(clss, entry);
+            }
+            _uvint28.write(out, entry.mapId);
+            entry.idWriter.write(out, o);
+        }
+
+        private CacheEntry mapType(final TypeMap map, final Class<?> clss) throws TypeException {
+            // assumes class is bound to definition, not identity.
+            final int[] ids = map.getLibrary().getId(clss);
+            if (ids.length != 1) {
+                if (ids.length > 1) {
+                    throw new TypeException("Class bound to multiple system types:" + clss.getName());
+                }
+                if (ids.length == 0) {
+                    throw new TypeException("Class not bound to any mapped type:" + clss.getName());
+                }
+            }
+            final int defId = ids[0];
+
+            final MetaName name = map.getLibrary().getName(defId);
+
+            // get the identity id.
+            final int id = map.getLibrary().getTypeId(name);
+
+            // Find the identifier for the abstract map definition using identity internal id.
+            final MetaMap metaMap = _metaAbstract._concreteToMap.get(Integer.valueOf(id));
+            if (metaMap == null) {
+                throw new TypeException(
+                                "MetaAbstract - Definition '" + name.getFullName() + "' not mapped to abstract type '" + map.getLibrary().getName(_metaAbstract.getMemberTypeId()).getFullName() + "'");
+            }
+
+            final CacheEntry entry = new CacheEntry();
+
+            if (!metaMap.isHidden) {
+                // This is very important.  When working as a remote client we must ensure
+                // that the server also has the mapping from concrete to map value.  By
+                // getting the System Id of the MapId it will automatically resolve if the
+                // server has the correct value.
+                try {
+                    map.getStreamId(metaMap.mapTypeId);
+                    map.getStreamId(id);
+                } catch (final TypeException ex) {
+                    throw new TypeException("MetaAbstract - Definition '" + name.getFullName() + "' not mapped to abstract type '"
+                                    + map.getLibrary().getName(_metaAbstract.getMemberTypeId()).getFullName() + "'");
+                }
+            }
+
+            // The Id written to file is the mapped concrete id.
+            try {
+                entry.mapId = Integer.valueOf(map.getStreamId(defId));
+            } catch (final TypeException ex) {
+                final MetaVersion version = map.getLibrary().getVersion(defId);
+                throw new TypeException("MetaAbstract - Definition '" + name.getFullName() + "/" + version.toString() + "' not mapped to abstract type '"
+                                + map.getLibrary().getName(_metaAbstract.getMemberTypeId()).getFullName() + "'");
+            }
+            // Cache the writer function.
+            entry.idWriter = map.getWriter(map.getStreamId(defId));
+            return entry;
+        }
+
+    }
+
+    public boolean isMapped(final int id) {
+        return _concreteToMap.get(Integer.valueOf(id)) == null ? false : true;
+    }
 
 }
