@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2003-2010, Live Media Pty. Ltd.
+ * Copyright (c) 2003-2019, Live Media Pty. Ltd.
  * All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without modification, are permitted
@@ -25,145 +25,134 @@
  */
 package com.argot.common;
 
+import static org.junit.jupiter.api.Assertions.assertEquals;
+
 import java.io.ByteArrayInputStream;
 import java.io.ByteArrayOutputStream;
 
-import junit.framework.TestCase;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 
+import com.argot.TypeInputStream;
+import com.argot.TypeLibrary;
 import com.argot.TypeLibraryLoader;
 import com.argot.TypeMap;
-import com.argot.TypeInputStream;
 import com.argot.TypeMapperCore;
 import com.argot.TypeMapperDynamic;
 import com.argot.TypeMapperError;
 import com.argot.TypeOutputStream;
-import com.argot.TypeLibrary;
 import com.argot.meta.MetaLoader;
 
-public class CommonTest
-extends TestCase
-{
+public class CommonTest {
 
     protected TypeOutputStream out;
     private TypeMap map;
     private ByteArrayOutputStream baos;
 
-	TypeLibraryLoader libraryLoaders[] = {
-		new MetaLoader(),
-		new CommonLoader()
-	};
+    TypeLibraryLoader libraryLoaders[] = { new MetaLoader(), new CommonLoader() };
 
-    protected void setUp() throws Exception
-    {
-        super.setUp();
-        
-		baos = new ByteArrayOutputStream();
-        TypeLibrary library = new TypeLibrary( libraryLoaders );
-		map = new TypeMap( library, new TypeMapperDynamic(new TypeMapperCore(new TypeMapperError())) );
-        out = new TypeOutputStream( baos, map );        
+    @BeforeEach
+    protected void setUp() throws Exception {
+        baos = new ByteArrayOutputStream();
+        TypeLibrary library = new TypeLibrary(libraryLoaders);
+        map = new TypeMap(library, new TypeMapperDynamic(new TypeMapperCore(new TypeMapperError())));
+        out = new TypeOutputStream(baos, map);
     }
 
-    protected TypeInputStream getInputStream()
-    {
-		System.out.println( "reading...." );
-		ByteArrayInputStream bais = new ByteArrayInputStream( baos.toByteArray() );
-		return new TypeInputStream( bais, map );
+    protected TypeInputStream getInputStream() {
+        System.out.println("reading....");
+        ByteArrayInputStream bais = new ByteArrayInputStream(baos.toByteArray());
+        return new TypeInputStream(bais, map);
     }
-    
-    protected void tearDown() throws Exception
-    {
-        super.tearDown();
-    }
-    
-    
-    public void testBigEndianSignedInteger() throws Exception
-    {
-		int i = -(int)(Math.PI*100000000l);
-	
-		Int32 besi = new Int32();
-		besi.write( out, new Integer( i ) );
 
-		TypeInputStream tmis = getInputStream();
+    @Test
+    public void testBigEndianSignedInteger() throws Exception {
+        int i = -(int) (Math.PI * 100000000l);
 
-		Integer si = (Integer) besi.read( tmis );
-		assertEquals( i, si.intValue() );
-    }
-    
-    public void testBigEndianSignedLong() throws Exception
-    {
-		long l = -(long)(Math.PI*1000000000000000000l);
-		
-		Int64 besl = new Int64();
-		besl.write( out, new Long( l) );
-		
-		TypeInputStream tmis = getInputStream();
+        Int32 besi = new Int32();
+        besi.write(out, Integer.valueOf(i));
 
-		Long sl = (Long) besl.read( tmis );
-		assertEquals( l, sl.longValue() );
-    }
-    
-    public void testBigEndianSignedShort() throws Exception
-    {
-		short s = -(short)(Math.PI*10000l);
-			
-		Int16 bess = new Int16();
-		bess.write( out, new Integer( s ) );
-		
-		TypeInputStream tmis = getInputStream();
-        
-		Short sr = (Short) bess.read( tmis );
-		assertEquals( s, sr.shortValue() );
-    }
-    
-    public void testBigEndianUnsignedByte() throws Exception
-    {
-		short bs = (240);
-        
-		UInt8 beub = new UInt8();
-		beub.write( out, new Short( bs ) );
+        TypeInputStream tmis = getInputStream();
 
-		TypeInputStream tmis = getInputStream();
-		
-		Short us = (Short) beub.read( tmis );
-		assertEquals( bs, us.shortValue() );
+        Integer si = (Integer) besi.read(tmis);
+        assertEquals(i, si.intValue());
     }
-    
-    public void testBigEndianUnsignedShort() throws Exception
-    {
-		short s = (short)(Math.PI*10000l);
-		
-		UInt16 beus = new UInt16();
-		beus.write( out, new Integer( s ) );
 
-		TypeInputStream tmis = getInputStream();
-		
-		Integer us = (Integer) beus.read( tmis );		
-		assertEquals( s, us.shortValue() );
+    @Test
+    public void testBigEndianSignedLong() throws Exception {
+        long l = -(long) (Math.PI * 1000000000000000000l);
+
+        Int64 besl = new Int64();
+        besl.write(out, Long.valueOf(l));
+
+        TypeInputStream tmis = getInputStream();
+
+        Long sl = (Long) besl.read(tmis);
+        assertEquals(l, sl.longValue());
     }
-    
-    public void testBigEndianUnsignedInteger() throws Exception
-    {
-		int i = (int)(Math.PI*100000000l);
-        
-		UInt32 beui = new UInt32();
-		beui.write( out, new Long( i )); 
-		TypeInputStream tmis = getInputStream();
 
-		Long ui = (Long) beui.read( tmis );
-		assertEquals( i, ui.longValue() );
+    @Test
+    public void testBigEndianSignedShort() throws Exception {
+        short s = -(short) (Math.PI * 10000l);
+
+        Int16 bess = new Int16();
+        bess.write(out, Integer.valueOf(s));
+
+        TypeInputStream tmis = getInputStream();
+
+        Short sr = (Short) bess.read(tmis);
+        assertEquals(s, sr.shortValue());
     }
-    
-    public void testBigEndianUnsignedLong() throws Exception
-    {
-		long l = (long)(Math.PI*1000000000000000000l);
 
-		UInt64 beul = new UInt64();
-		beul.write( out, new Long( l ));
-		
-		TypeInputStream tmis = getInputStream();        
+    @Test
+    public void testBigEndianUnsignedByte() throws Exception {
+        short bs = (240);
 
-		Long ul = (Long) beul.read( tmis );
-		assertEquals( l, ul.longValue() );
+        UInt8 beub = new UInt8();
+        beub.write(out, Short.valueOf(bs));
+
+        TypeInputStream tmis = getInputStream();
+
+        Short us = (Short) beub.read(tmis);
+        assertEquals(bs, us.shortValue());
     }
-    
+
+    @Test
+    public void testBigEndianUnsignedShort() throws Exception {
+        short s = (short) (Math.PI * 10000l);
+
+        UInt16 beus = new UInt16();
+        beus.write(out, Integer.valueOf(s));
+
+        TypeInputStream tmis = getInputStream();
+
+        Integer us = (Integer) beus.read(tmis);
+        assertEquals(s, us.shortValue());
+    }
+
+    @Test
+    public void testBigEndianUnsignedInteger() throws Exception {
+        int i = (int) (Math.PI * 100000000l);
+
+        UInt32 beui = new UInt32();
+        beui.write(out, Long.valueOf(i));
+        TypeInputStream tmis = getInputStream();
+
+        Long ui = (Long) beui.read(tmis);
+        assertEquals(i, ui.longValue());
+    }
+
+    @Test
+    public void testBigEndianUnsignedLong() throws Exception {
+        long l = (long) (Math.PI * 1000000000000000000l);
+
+        UInt64 beul = new UInt64();
+        beul.write(out, Long.valueOf(l));
+
+        TypeInputStream tmis = getInputStream();
+
+        Long ul = (Long) beul.read(tmis);
+        assertEquals(l, ul.longValue());
+    }
+
 }
